# arti-pipes

./: CLAUDE.md  Cargo.toml  PATTERNS.md  README.md  TOOLS.md
src/: error.rs  executor.rs  lib.rs  node.rs  pipeline.rs  platform.rs  prompt.rs  tool.rs  tool_registry.rs
src/llm_executors/: deepseek.rs  gpt_oss.rs  mod.rs  openai.rs  qwen.rs  types.rs
src/transport/: engine.rs  host.rs  mod.rs  wasm.rs
tests/: file_saver_tool.rs  file_saver_with_tag_extraction.rs  three_node_pipeline.rs  tool_with_subpipeline.rs  tools_pipeline.rs  transport.rs
